--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -106,7 +106,7 @@
                                         <li><a href="{{ path('admin_main') }}">В админ панель</a></li>
                                     {% endif %}
                                     <li><a href="{{ path('fos_user_profile_edit') }}">В профиль</a></li>
-                                    <li><a href="#">Избранные события</a></li>
+                                    {#<li><a href="#">Избранные события</a></li>#}
                                     <li role="separator" class="divider"></li>
                                     <li><a href="{{ path('fos_user_security_logout') }}">Выйти</a></li>
                                 </ul>
