--- a/src/AppBundle/Resources/views/menu.html.twig
+++ b/src/AppBundle/Resources/views/menu.html.twig
@@ -18,7 +18,7 @@
                     <ul class="submenu-items">
                         <li><a href="{{ path('publications_by_category',{'category': '0'}) }}">Статьи</a></li>
                         <li><a href="{{ path('publications_by_category',{'category': '1'}) }}">Новости</a></li>
-                        <li><a href="{{ path('publications_by_category',{'category': '2'}) }}">Клинические иследования</a></li>
+                        {#<li><a href="{{ path('publications_by_category',{'category': '2'}) }}">Клинические иследования</a></li>#}
                     </ul>
                 </div>
             </li>
