--- a/src/AppBundle/Resources/views/Calculator/list.html.twig
+++ b/src/AppBundle/Resources/views/Calculator/list.html.twig
@@ -5,6 +5,9 @@
     <strong>Медицинский калькулятор</strong> – справочный инструмент для поддержки принятия решений
     <br />
     <br />
+    <div class="alert alert-primary">Калькуляторы находятся в разработке и появятся в самое ближайшее время</div>
+    <br />
+    <br />
     {#http://klinrek.ru/calcs/#}
     <div class="row">
         <ul class="list-group">
