--- a/src/AppBundle/Resources/views/Calculator/list.html.twig
+++ b/src/AppBundle/Resources/views/Calculator/list.html.twig
@@ -5,7 +5,7 @@
     <strong>Медицинский калькулятор</strong> – справочный инструмент для поддержки принятия решений
     <br />
     <br />
-    <div class="alert alert-primary">Калькуляторы находятся в разработке и появятся в самое ближайшее время</div>
+    <div class="alert alert-info">Калькуляторы находятся в разработке и появятся в самое ближайшее время</div>
     <br />
     <br />
     {#http://klinrek.ru/calcs/#}
