--- a/src/AppBundle/Resources/views/Info/test_mail.html.twig
+++ b/src/AppBundle/Resources/views/Info/test_mail.html.twig
@@ -12,10 +12,10 @@
             <table cellpadding="0" cellspacing="0" style="width: 100%; padding: 0 30px" width="100%">
                 <tr>
                     <td style="text-align: center; font-size: 20px" align="center">
-                        <a href="{{ url('homepage') }}" style="color: #444; text-decoration: none">МЫ ОТКРЫЛИСЬ!</a>
+                        <a href="{{ url('homepage') }}" style="color: #444; text-decoration: none">ПРЕДСТОЯЩИЕ СОБЫТИЯ В МИРЕ <br />МЕДИЦИНЫ</a>
                     </td>
                     <td style="text-align: right" align="right">
-                        <a href="{{ url('homepage') }}"><img src="{{ asset('bundles/app/images/logo.png') }}" style="width: 150px" width="150"></a>
+                        <a href="{{ url('homepage') }}"><img src="https://medalmanah.ru{{ asset('bundles/app/images/logo.png') }}" style="width: 150px" width="150"></a>
                     </td>
                 </tr>
             </table>
@@ -242,7 +242,7 @@
         <td style="text-align: center; font-size: 24px; color: #555" colspan="2">
             С уважением, служба поддержки medalmanah.ru
             <div style="font-size: 13px">
-                Для отмены подписки пройдите пожалуйста по <a href="#">ссылке</a>
+                Для отмены подписки пройдите пожалуйста по <a href="{{ url('unfollow') }}?email={{ email }}">ссылке</a>
             </div>
         </td>
     </tr>
