--- a/src/AppBundle/Resources/views/Publication/event.html.twig
+++ b/src/AppBundle/Resources/views/Publication/event.html.twig
@@ -26,6 +26,13 @@
             <div class="title"><div>{{ event.title }}</div></div>
             {% if event.preview.path is defined %}
                 <div class="col-xs-4">
+                    <img src="{{ publication.preview.path }}"
+                         style="max-width: 250px; float: left; margin: 0 20px 10px 10px"
+                         class="img-thumbnail"
+                         alt="{{ publication.title }}"
+                         title="{{ publication.title }}"
+                         itemprop="image"
+                    />
                 </div>
             {% endif %}
             <div class="col-xs-{{ event.preview.path is defined ? '6' : '10' }}">
