--- a/src/AppBundle/Resources/views/Info/test_mail.html.twig
+++ b/src/AppBundle/Resources/views/Info/test_mail.html.twig
@@ -77,12 +77,16 @@
                 </tr>
                 <tr style="background: #FFF; padding: 10px" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
-                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469210649.png" style="width: 160px"></span>
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
+                            <a href="https://medalmanah.ru/app_dev.php/event/139" target="_blank" style="color: #f00000">
+                                <img src="http://medalmanah.ru/upload/event/1468412726.jpeg" style="width: 160px">
+                            </a>
+                        </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">22.07.2016</span><br />
-                        <div><strong>Не только иммунитет</strong></div>
-                        <p>Сенсационное исследование, опубликованное в Nature, установило захватывающую и неожиданную связь социального поведения и иммунной системы.</p>
+                        <span style="color: #777">25.08.2016 - 27.08.2016</span><br />
+                        <div><a href="https://medalmanah.ru/app_dev.php/event/139" target="_blank" style="color: #f00000"><strong>Всероссийская научно-практическая конференция с международным участием «оперативная и консервативная колопроктология: современные технологии для высокого качества жизни пациентов» и объединенный каспийский и байкальский форум по проблемам ВЗК</strong></a></div>
+                        <p style="font-size: 10pt">Общероссийская общественная организация «АССОЦИАЦИЯ КОЛОПРОКТОЛОГОВ РОССИИ» приглашает вас принять участие в работе Всероссийского Съезда колопроктологов с международным участием «Оперативная и консервативная колопроктология: современные технологии для высокого качества жизни пациентов» и Объединенного Каспийского и Байкальского форума по проблемам ВЗК».</p>
                     </td>
                 </tr>
                 <tr>
@@ -90,12 +94,16 @@
                 </tr>
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
-                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469210649.png" style="width: 160px"></span>
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
+                            <a href="https://medalmanah.ru/app_dev.php/event/140" target="_blank" style="color: #f00000">
+                                <img src="http://medalmanah.ru/upload/event/1468414493.jpeg" style="width: 160px">
+                            </a>
+                        </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">22.07.2016</span><br />
-                        <div><strong>Не только иммунитет</strong></div>
-                        <p>Сенсационное исследование, опубликованное в Nature, установило захватывающую и неожиданную связь социального поведения и иммунной системы.</p>
+                        <span style="color: #777">07.09.2016 - 07.09.2016</span><br />
+                        <div><a href="https://medalmanah.ru/app_dev.php/event/140" target="_blank" style="color: #f00000"><strong>Межрегиональная тематическая конференция "Современные подходы к лечению критической ишемии нижних конечностей"т</strong></a></div>
+                        <p style="font-size: 10pt">Конференция посвящена современным способам хирургического и медикаментозного лечения критической ишемии нижних конечностей различного генеза.</p>
                     </td>
                 </tr>
                 <tr>
@@ -103,12 +111,16 @@
                 </tr>
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
-                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469210649.png" style="width: 160px"></span>
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
+                            <a href="https://medalmanah.ru/app_dev.php/event/8" target="_blank" style="color: #f00000">
+                                <img src="http://medalmanah.ru/upload/event/1464645318.png" style="width: 160px">
+                            </a>
+                        </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">22.07.2016</span><br />
-                        <div><strong>Не только иммунитет</strong></div>
-                        <p>Сенсационное исследование, опубликованное в Nature, установило захватывающую и неожиданную связь социального поведения и иммунной системы.</p>
+                        <span style="color: #777">10.09.2016 - 13.09.2016</span><br />
+                        <div><a href="https://medalmanah.ru/app_dev.php/event/8" target="_blank" style="color: #f00000"><strong>IX Общероссийский семинар «Репродуктивный потенциал России: версии и контраверсии»</strong></a></div>
+                        <p style="font-size: 10pt">«Сочинские контраверсии» уже девятый год подряд собирают профессионалов репродуктивной медицины, стремящихся к совершенству в своей практической и научной работе. Постепенно это уже становится доброй традицией для прогрессивной медицинской общественности — в начале сентября собираться на «Сочинские контраверсии», давая старт рабочему году и аккумулируя на весь этот период столь нужный всем нам настрой на позитив.</p>
                     </td>
                 </tr>
                 <tr>
@@ -116,12 +128,16 @@
                 </tr>
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
-                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469210649.png" style="width: 160px"></span>
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
+                            <a href="https://medalmanah.ru/app_dev.php/event/8" target="_blank" style="color: #f00000">
+                                <img src="http://medalmanah.ru/upload/event/1464642619.jpeg" style="width: 160px">
+                            </a>
+                        </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">22.07.2016</span><br />
-                        <div><strong>Не только иммунитет</strong></div>
-                        <p>Сенсационное исследование, опубликованное в Nature, установило захватывающую и неожиданную связь социального поведения и иммунной системы.</p>
+                        <span style="color: #777">13.09.2016 - 13.09.2016</span><br />
+                        <div><a href="https://medalmanah.ru/app_dev.php/event/8" target="_blank" style="color: #f00000"><strong>Амбулаторный прием. Цикл образовательных сессий для врачей поликлиник Сессия: "Лекарственный справочник амбулаторного терапевта"</strong></a></div>
+                        <p style="font-size: 10pt">Уважаемые коллеги! Рады сообщить, что участники сессии получат сертификат с образовательными кредитами по системе повышения квалификации в рамках НМО (6 кредитов), которые будут учитываться при аккредитации специалистов.</p>
                     </td>
                 </tr>
                 <tr>
@@ -129,12 +145,16 @@
                 </tr>
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
-                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469210649.png" style="width: 160px"></span>
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
+                            <a href="https://medalmanah.ru/app_dev.php/event/142" target="_blank" style="color: #f00000">
+                                <img src="http://medalmanah.ru/upload/event/1468419688.jpeg" style="width: 160px">
+                            </a>
+                        </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">22.07.2016</span><br />
-                        <div><strong>Не только иммунитет</strong></div>
-                        <p>Сенсационное исследование, опубликованное в Nature, установило захватывающую и неожиданную связь социального поведения и иммунной системы.</p>
+                        <span style="color: #777">19.09.2016 - 20.09.2016</span><br />
+                        <div><a href="https://medalmanah.ru/app_dev.php/event/142" target="_blank" style="color: #f00000"><strong>Региональная тематическая конференция с мастер-классом "Хирургия послеоперационных вентральных грыж"</strong></a></div>
+                        <p style="font-size: 10pt">Организатор: Кафедра хирургии и онкологии ФПК МР РУДН.</p>
                     </td>
                 </tr>
                 <tr>
@@ -172,12 +192,12 @@
                 </tr>
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
-                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469210649.png" style="width: 160px"></span>
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469998154.png" style="width: 160px"></span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">22.07.2016</span><br />
-                        <div><strong>Не только иммунитет</strong></div>
-                        <p>Сенсационное исследование, опубликованное в Nature, установило захватывающую и неожиданную связь социального поведения и иммунной системы.</p>
+                        <span style="color: #777">31.07.2016</span><br />
+                        <div><strong>Мини-мозг для исследований</strong></div>
+                        <p>Ученые из Сингапура сделали огромный рывок в науке - вырастив мини-мозг в лаборатории. Эти мини версии человеческого среднего мозга позволят исследователям в полном объеме изучить болезнь Паркинсона, а также иные заболевания, связанные поражениями мозга.</p>
                     </td>
                 </tr>
                 <tr>
@@ -185,13 +205,13 @@
                 </tr>
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
-                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469196541.png" style="width: 160px"></span>
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469895922.png" style="width: 160px"></span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
 
-                        <span style="color: #777">22.07.2016</span><br />
-                        <div><strong>Бросать полезно</strong></div>
-                        <p>Курильщики, особенно курящие женщины, подвержены наибольшему риску кровотечений мозговых оболочек (субарахноидальное кровотечение), по сравнению с некурящими. Такой вывод делается в новом исследовании, обнародованном на страницах журнала Stroke.</p>
+                        <span style="color: #777">30.07.2016</span><br />
+                        <div><strong>Сверхпрочный сплав для протезов</strong></div>
+                        <p>Был придуман новый металлический сплав из титана и золота, который превосходит по своей прочности простые сплавы в 4 раза. Данное достижение сделано командой Rice University под руководством Эмилии Моросан. Его планируют использовать для замены тазобедренных и коленных суставов, так как простые протезы, которые на данный момент делаются из титана, не долговечны и их приходится менять каждые 10 лет.</p>
                     </td>
                 </tr>
                 <tr>
@@ -199,13 +219,13 @@
                 </tr>
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
-                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469192967.png" style="width: 160px"></span>
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469895069.png" style="width: 160px"></span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
 
-                        <span style="color: #777">22.07.2016</span><br />
-                        <div><strong>Врачи-чемпионы</strong></div>
-                        <p>Поздравляем сборную российских врачей с победой в чемпионате мира по футболу в Барселоне!</p>
+                        <span style="color: #777">30.07.2016</span><br />
+                        <div><strong>Пластырь против рака</strong></div>
+                        <p>Массачусетскому технологическому университету удалось разработать уникальный противораковый пластырь. Приоритетным в данный момент лечением злокачественных новообразований является оперативный метод и химиотерапия, однако полное освобождение организма от опухоли не всегда возможно, а в большинстве случаев и невозможно вовсе.</p>
                     </td>
                 </tr>
                 <tr>
@@ -213,13 +233,13 @@
                 </tr>
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
-                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469120806.png" style="width: 160px"></span>
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469862990.png" style="width: 160px"></span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
 
-                        <span style="color: #777">21.07.2016</span><br />
-                        <div><strong>Кишечник — всему голова</strong></div>
-                        <p>Нейрофизиологи из Университета Чикаго (США) установили, что лечение мышей антибиотиками широкого спектра в течение длительного периода уменьшает бляшки, вызывающие болезнь Альцгеймера, и повышает воспалительный статус клеток микроглии головного мозга.</p>
+                        <span style="color: #777">30.07.2016</span><br />
+                        <div><strong>Антиоксиданты помогают раку</strong></div>
+                        <p>Если верить новому исследованию, новейшая лекарственная терапия, которая имитирует подавление антиоксидантного протеина, убивает раковые клетки поджелудочной железы.</p>
                     </td>
                 </tr>
                 <tr>
