--- a/src/AppBundle/Resources/views/Publication/event.html.twig
+++ b/src/AppBundle/Resources/views/Publication/event.html.twig
@@ -27,7 +27,7 @@
             {% if event.preview.path is defined %}
                 <div class="col-xs-4">
                     <img src="{{ event.preview.path }}"
-                         style="max-width: 250px; float: left; margin: 0 20px 10px 10px"
+                         style="float: left; margin: 0 20px 10px 10px"
                          class="img-thumbnail"
                          alt="{{ event.title }}"
                          title="{{ event.title }}"
