--- a/src/AppBundle/Resources/views/Mail/delivery.html.twig
+++ b/src/AppBundle/Resources/views/Mail/delivery.html.twig
@@ -1,6 +1,6 @@
 <html>
-<body style="font-family: Arial, Tahoma, sans-serif; background: url('http://medalmanah.ru/bundles/app/images/light_toast.png')" background="http://medalmanah.ru/bundles/app/images/light_toast.png" bgcolor="#EEE">
-<table style="width: 600px" width="600" cellpadding="0" cellspacing="0">
+<body style="font-family: Arial, Tahoma, sans-serif; background: url('http://medalmanah.ru/bundles/app/images/light_toast.png'); text-align: center" background="http://medalmanah.ru/bundles/app/images/light_toast.png" bgcolor="#EEE">
+<table style="width: 600px; margin: 0 auto; text-align: left" width="600" cellpadding="0" cellspacing="0">
     <tr>
         <td style="background: #f00000; font-size: 10px" colspan="2"><br /></td>
     </tr>
@@ -201,7 +201,7 @@
                     <td style="text-align: left; font-size: 16px" align="left" >
                         <span style="color: #777">31.07.2016</span><br />
                         <div><a href="https://medalmanah.ru/news/mini_mozg_dlja_issledovanij" target="_blank" style="color: #F00000"><strong>Мини-мозг для исследований</strong></a></div>
-                        <p style="font-size: 10pt">Ученые из Сингапура сделали огромный рывок в науке - вырастив мини-мозг в лаборатории. Эти мини версии человеческого среднего мозга позволят исследователям в полном объеме изучить болезнь Паркинсона, а также иные заболевания, связанные поражениями мозга.</p>
+                        <p>Ученые из Сингапура сделали огромный рывок в науке - вырастив мини-мозг в лаборатории. Эти мини версии человеческого среднего мозга позволят исследователям в полном объеме изучить болезнь Паркинсона, а также иные заболевания, связанные поражениями мозга.</p>
                     </td>
                 </tr>
                 <tr>
@@ -219,7 +219,7 @@
 
                         <span style="color: #777">30.07.2016</span><br />
                         <div><a href="https://medalmanah.ru/news/sverhprochnyj_splav_dlja_protezov" target="_blank" style="color: #F00000"><strong>Сверхпрочный сплав для протезов</strong></a></div>
-                        <p style="font-size: 10pt">Был придуман новый металлический сплав из титана и золота, который превосходит по своей прочности простые сплавы в 4 раза. Данное достижение сделано командой Rice University под руководством Эмилии Моросан. Его планируют использовать для замены тазобедренных и коленных суставов, так как простые протезы, которые на данный момент делаются из титана, не долговечны и их приходится менять каждые 10 лет.</p>
+                        <p>Был придуман новый металлический сплав из титана и золота, который превосходит по своей прочности простые сплавы в 4 раза. Данное достижение сделано командой Rice University под руководством Эмилии Моросан. Его планируют использовать для замены тазобедренных и коленных суставов, так как простые протезы, которые на данный момент делаются из титана, не долговечны и их приходится менять каждые 10 лет.</p>
                     </td>
                 </tr>
                 <tr>
@@ -237,7 +237,7 @@
 
                         <span style="color: #777">30.07.2016</span><br />
                         <div><strong><a href="https://medalmanah.ru/news/plastyr_protiv_raka" target="_blank" style="color: #F00000">Пластырь против рака</a></strong></div>
-                        <p style="font-size: 10pt">Массачусетскому технологическому университету удалось разработать уникальный противораковый пластырь. Приоритетным в данный момент лечением злокачественных новообразований является оперативный метод и химиотерапия, однако полное освобождение организма от опухоли не всегда возможно, а в большинстве случаев и невозможно вовсе.</p>
+                        <p>Массачусетскому технологическому университету удалось разработать уникальный противораковый пластырь. Приоритетным в данный момент лечением злокачественных новообразований является оперативный метод и химиотерапия, однако полное освобождение организма от опухоли не всегда возможно, а в большинстве случаев и невозможно вовсе.</p>
                     </td>
                 </tr>
                 <tr>
@@ -255,7 +255,7 @@
 
                         <span style="color: #777">30.07.2016</span><br />
                         <div><a href="https://medalmanah.ru/news/antioksidanty_pomogajut_raku" target="_blank" style="color: #F00000"><strong>Антиоксиданты помогают раку</strong></a></div>
-                        <p style="font-size: 10pt">Если верить новому исследованию, новейшая лекарственная терапия, которая имитирует подавление антиоксидантного протеина, убивает раковые клетки поджелудочной железы.</p>
+                        <p>Если верить новому исследованию, новейшая лекарственная терапия, которая имитирует подавление антиоксидантного протеина, убивает раковые клетки поджелудочной железы.</p>
                     </td>
                 </tr>
                 <tr>
