--- a/src/AppBundle/Resources/views/Mail/delivery.html.twig
+++ b/src/AppBundle/Resources/views/Mail/delivery.html.twig
@@ -12,10 +12,10 @@
             <table cellpadding="0" cellspacing="0" style="width: 100%; padding: 0 30px" width="100%">
                 <tr>
                     <td style="text-align: center; font-size: 20px" align="center">
-                        <a href="{{ url('homepage') }}" style="color: #444; text-decoration: none">ПРЕДСТОЯЩИЕ СОБЫТИЯ В МИРЕ <br />МЕДИЦИНЫ</a>
+                        <a href="https://medalmanah.ru{{ path('homepage') }}" style="color: #444; text-decoration: none">ПРЕДСТОЯЩИЕ СОБЫТИЯ В МИРЕ <br />МЕДИЦИНЫ</a>
                     </td>
                     <td style="text-align: right" align="right">
-                        <a href="{{ url('homepage') }}"><img src="https://medalmanah.ru{{ asset('bundles/app/images/logo.png') }}" style="width: 150px" width="150"></a>
+                        <a href="https://medalmanah.ru{{ path('homepage') }}"><img src="https://medalmanah.ru{{ asset('bundles/app/images/logo.png') }}" style="width: 150px" width="150"></a>
                     </td>
                 </tr>
             </table>
@@ -57,7 +57,7 @@
     </tr>
     <tr>
         <td style="padding-left: 50px; font-size: 24px; color: #555; background: #FFF" colspan="2" bgcolor="#FFF">
-            <a style="color: #555; text-decoration: none" href="{{ url('events') }}">Ближайшие события</a>
+            <a style="color: #555; text-decoration: none" href="https://medalmanah.ru{{ path('events') }}">Ближайшие события</a>
         </td>
     </tr>
     <tr>
@@ -173,7 +173,7 @@
         <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
-        <td style="padding-left: 50px; font-size: 24px; color: #555; background: #FFF" bgcolor="#FFF" colspan="2"><a style="color: #555; text-decoration: none" href="{{ url('news') }}">Интересные новости</a></td>
+        <td style="padding-left: 50px; font-size: 24px; color: #555; background: #FFF" bgcolor="#FFF" colspan="2"><a style="color: #555; text-decoration: none" href="https://medalmanah.ru{{ path('news') }}">Интересные новости</a></td>
     </tr>
     <tr>
         <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
@@ -278,7 +278,7 @@
         <td style="text-align: center; font-size: 24px; color: #555" colspan="2">
             С уважением, служба поддержки medalmanah.ru
             <div style="font-size: 13px">
-                Для отмены подписки пройдите пожалуйста по <a href="{{ url('unfollow') }}?email={{ email }}">ссылке</a>
+                Для отмены подписки пройдите пожалуйста по <a href="https://medalmanah.ru{{ path('unfollow') }}?email={{ email }}">ссылке</a>
             </div>
         </td>
     </tr>
