--- a/src/AppBundle/Resources/views/Mail/delivery.html.twig
+++ b/src/AppBundle/Resources/views/Mail/delivery.html.twig
@@ -286,5 +286,6 @@
         <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
 </table>
+<img src="https://medalmanah.ru/analytics/getimage/firstdelivery/{{ id }}"/>
 </body>
 </html>
