--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block topBody %}
-    <div class="row">
+    <div class="row hidden-sm hidden-xs">
         <div class="event-carusel">
             {% for carusel in carusels %}
                 {% if carusel.preview.path is defined %}
