--- a/src/AppBundle/Resources/public/less/common.css
+++ b/src/AppBundle/Resources/public/less/common.css
@@ -681,3 +681,72 @@ nav .navbar-nav li.active a:hover {
   cursor: pointer;
   text-decoration: underline;
 }
+.navbar-toggle .icon-bar {
+  background: #DD0000;
+}
+@media screen and (max-width: 991px) {
+  .rightbanner {
+    text-align: center;
+  }
+  .slider {
+    display: none;
+  }
+  nav {
+    padding-left: 20px;
+  }
+  nav .navbar-nav li {
+    display: block;
+  }
+  .navbar-collapse.in {
+    overflow-y: hidden;
+    height: auto;
+  }
+  nav .navbar-nav {
+    border: 0;
+  }
+  nav .navbar-nav li:not(:last-child) {
+    border: 0;
+  }
+  nav .navbar-nav li {
+    border: 0;
+  }
+  nav .navbar-nav li a {
+    font-weight: bold;
+    text-align: left;
+    color: #DD0000;
+    background: #FFFFFF;
+  }
+  nav .navbar-nav li:hover {
+    color: #DD0000;
+    background: #FFFFFF;
+  }
+  nav .navbar-nav li:hover a {
+    color: #DD0000;
+    background: #FFFFFF;
+  }
+  nav .navbar-nav li .submunu {
+    background: #FFF;
+    position: relative;
+    display: block;
+    visibility: visible;
+    opacity: 1;
+    border: 0;
+  }
+  nav .navbar-nav li .submunu ul {
+    margin-left: 40px;
+    border: 0;
+  }
+  nav .navbar-nav li .submunu ul li {
+    border: 0;
+    background: #FFF;
+  }
+  nav .navbar-nav li .submunu ul li a {
+    color: #DD0000;
+    background: #FFFFFF;
+    font-weight: normal;
+  }
+  nav .navbar-nav li .submunu ul li a:hover {
+    color: #DD0000;
+    background: #FFFFFF;
+  }
+}
