--- a/src/AppBundle/Resources/views/Publication/eventList.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventList.html.twig
@@ -30,7 +30,7 @@
 
 {% block content %}
     <div class="col-sm-12">
-        <div class="title"><div>{{ category }}</div></div>
+        <div class="title"><h1>{{ category }}</h1></div>
         <div class="filter">
             <form class="form-vertical">
                 <div class="row">
