--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -23,11 +23,15 @@ html{
 }
 body{
     text-align: center;
-    font-family: 'HelveticaNeue-Light';
+    font-family: 'Roboto,Arial,serif;';
     background: url("/bundles/app/images/light_toast.png");
     margin: 0;
     overflow-x: hidden;
+    font-size: 15px;
 
+}
+h1{
+    font-family: 'Georgia, serif';
 }
 
 .table-layout {
@@ -282,10 +286,12 @@ nav .navbar-nav li:hover{
     color: @color-red;
     font-size: 16px;
     margin-bottom: 20px;
-    div{
+    h1{
         border-bottom: 2px solid @color-black;
         display: inline-block;
         padding: 5px 10px;
+        font-size: 18px;
+        margin: 0;
     }
 }
 .new-item{
@@ -701,8 +707,9 @@ nav .navbar-nav li.active a:hover{
 }
 
 .publication-title a{
-    color: #222;
+    color: @color-red;
     font-weight: bold;
+    font-size: 16px;
 }
 .publication-footerline{
     //background: #F5F5F5;
