--- a/src/AppBundle/Resources/views/Publication/page.html.twig
+++ b/src/AppBundle/Resources/views/Publication/page.html.twig
@@ -8,7 +8,7 @@
 
 {% block content %}
     <div class="col-sm-12" style="padding-right: 0">
-        <div class="title"><div class="text-uppercase">{{ page.title }}</div></div>
+        <div class="title text-uppercase"><h1>{{ page.title }}</h1></div>
         <div>
             {{ page.body | raw }}
         </div>
