--- a/src/AdminBundle/Resources/views/menu.html.twig
+++ b/src/AdminBundle/Resources/views/menu.html.twig
@@ -44,6 +44,18 @@
             </a>
         </li>
         <li class="">
+            <a href="{{ path('admin_partner_list') }}">
+                <i class="glyphicon glyphicon-user"></i>
+                Партнеры
+            </a>
+        </li>
+        <li class="">
+            <a href="{{ path('admin_organization_list') }}">
+                <i class="glyphicon glyphicon-list-alt"></i>
+                Организации
+            </a>
+        </li>
+        <li class="">
             <a href="{{ path('admin_calendar_list') }}">
                 <i class="glyphicon glyphicon-picture"></i>
                 Календарь
