--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="robots" content="index, follow"/>
-    <link rel="canonical" href="http://euat.ru{{ app.request.pathInfo }}" />
+    <link rel="canonical" href="https://medalmanah.ru{{ app.request.pathInfo }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="yandex-verification" content="ed498bae1f81c4b1" />
 
