add registr link in layout

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -120,7 +120,7 @@
                         </div>
                     {% else %}
                         <div class="navbar-form navbar-right">
-                            <button class="btn btn-primary" id="login">Вход</button>
+                            <a href="{{ path('fos_user_registration_register') }}">Регистрация</a>&nbsp;&nbsp;&nbsp;<button class="btn btn-primary" id="login">Вход</button>
                         </div>
                         <div class="register-btn">
                             {#<a href="{{ path('fos_user_registration_register') }}">Регистрация</a>#}
