--- a/src/AppBundle/Resources/views/Calendar/calendar.html.twig
+++ b/src/AppBundle/Resources/views/Calendar/calendar.html.twig
@@ -1,11 +1,11 @@
 {% extends '@App/layout.html.twig' %}
 
-{% block content %}
+{% block seo %}
 
     <title>Исторические медицинские события</title>
     <meta name="description" content="Исторические медицинские события, празники, дни памяти на сайте Алманах медицинских событий "/>
     <meta name="keywords" content="Исторические медицинские события, празники, дни памяти "/>
-{% block seo %}
+{% endblock %}
 
 {% block content %}
     <div class="title"><h1 itemprop="name">Календарь медицинских событий</h1></div>
