--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -215,6 +215,7 @@
 </div>
 {% block modal %}{% endblock %}
 {% include "@App/Modal/login.html.twig" %}
+{#{% include "@App/banner.html.twig" %}#}
 {% include "@App/counter.html.twig" %}
 </body>
 </html>
