--- a/src/AppBundle/Resources/public/less/common.css
+++ b/src/AppBundle/Resources/public/less/common.css
@@ -54,6 +54,10 @@ a:hover,
 a:focus {
   color: #9b0d27;
 }
+.btn-danger {
+  background: #c9302c;
+  border-color: #ac2925;
+}
 .btn-primary {
   background: #383838;
   border: 1px solid #050505;
@@ -756,4 +760,56 @@ nav .navbar-nav li.active a:hover {
     color: #DD0000;
     background: #FFFFFF;
   }
+}
+.bg-gray {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: #000;
+  opacity: 0.5;
+}
+.custom-banner {
+  background: url('/bundles/app/images/custombanner/bg.png') #FFF no-repeat;
+  width: 600px;
+  padding: 15px 20px;
+  position: fixed;
+  left: 50%;
+  margin-left: -300px;
+  top: 120px;
+  border: 1px solid #777;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  z-index: 50;
+}
+.custom-banner .title {
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #000;
+  font-size: 24px;
+  border: 0;
+}
+.custom-banner .right {
+  margin-left: 230px;
+}
+.custom-banner ul {
+  list-style: disc;
+  color: #DD0000;
+}
+.custom-banner ul li {
+  color: #DD0000;
+  padding-top: 5px;
+  padding-left: 10px;
+  margin-left: 20px;
+}
+.custom-banner ul li span {
+  color: #383838;
+}
+.custom-banner .firsttxt {
+  font-size: 18px;
+  color: #DD0000;
+  text-transform: uppercase;
+  font-weight: bold;
 }
