--- a/src/AppBundle/Resources/views/banner.html.twig
+++ b/src/AppBundle/Resources/views/banner.html.twig
@@ -9,7 +9,7 @@
         <br />
         <div style="font-size: 15px;">
             <div  style="font-size: 18px">
-                <strong style="font-size: 18px;">Представляем вам новый портал.</strong>
+                <strong style="font-size: 18px;">Представляем Вам новый портал.</strong>
                 <br />
                 Здесь Вы можете увидеть:
             </div>
