--- a/src/AppBundle/Resources/views/banner.html.twig
+++ b/src/AppBundle/Resources/views/banner.html.twig
@@ -14,7 +14,7 @@
                 Здесь Вы можете увидеть:
             </div>
             <ul style="font-size: 18px">
-                <li><span>Календарь всех мероприятий, курсов, ФПДО, форумов</span></li>
+                <li><span>Календарь медицинских мероприятий, курсов, ФПДО, форумов</span></li>
                 <li><span>Последние новости в сфере медицины</span></li>
                 <li><span>Большое количество инструментов, которые помогут Вам в Вашей работе</span></li>
             </ul>
