--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -6,6 +6,8 @@
     <link rel="canonical" href="https://medalmanah.ru{{ app.request.pathInfo }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="yandex-verification" content="ed498bae1f81c4b1" />
+    <meta name="wot-verification" content="2e58572c7f4a1eb87c60"/>
+
 
     <link rel="apple-touch-icon" sizes="57x57" href="{{ asset('bundles/app/images/favicons/apple-icon-57x57.png') }}">
     <link rel="apple-touch-icon" sizes="60x60" href="{{ asset('bundles/app/images/favicons/apple-icon-60x60.png') }}">
