--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -29,19 +29,31 @@
 
     {% block social %}{% endblock %}
     {% block javascript %}
+        {% javascripts
+            'assets/vendor/jquery/dist/jquery.min.js'
+            'assets/vendor/bootstrap/dist/js/bootstrap.min.js'
+            'assets/vendor/owl.carousel/dist/owl.carousel.min.js'
+            'assets/vendor/chosen/chosen.jquery.min.js'
+            'assets/vendor/bootstrap-multiselect/dist/js/bootstrap-multiselect.js'
+            'assets/vendor/jquery-mask-plugin/dist/jquery.mask.min.js'
+            'assets/vendor/hinclude/hinclude.js'
+            'bundles/app/js/main.js'
+        filter='uglifyjs2' %}
+        <script src="{{ asset_url }}"></script>
+        {% endjavascripts %}
         <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
         <script src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
-        <script src="{{ asset('assets/vendor/jquery/dist/jquery.min.js') }}"></script>
-        <script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>
-        <script src="{{ asset('assets/vendor/owl.carousel/dist/owl.carousel.min.js') }}"></script>
-        <script src="{{ asset('assets/vendor/chosen/chosen.jquery.min.js') }}"></script>
-        <script src="{{ asset('assets/vendor/bootstrap-multiselect/dist/js/bootstrap-multiselect.js') }}"></script>
+        {#<script src="{{ asset('assets/vendor/jquery/dist/jquery.min.js') }}"></script>#}
+        {#<script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>#}
+        {#<script src="{{ asset('assets/vendor/owl.carousel/dist/owl.carousel.min.js') }}"></script>#}
+        {#<script src="{{ asset('assets/vendor/chosen/chosen.jquery.min.js') }}"></script>#}
+        {#<script src="{{ asset('assets/vendor/bootstrap-multiselect/dist/js/bootstrap-multiselect.js') }}"></script>#}
 
-        <script src="{{ asset('assets/vendor/jquery-mask-plugin/dist/jquery.mask.min.js') }}"></script>
+        {#<script src="{{ asset('assets/vendor/jquery-mask-plugin/dist/jquery.mask.min.js') }}"></script>#}
 
-        <script src="{{ asset('assets/vendor/hinclude/hinclude.js') }}"></script>
+        {#<script src="{{ asset('assets/vendor/hinclude/hinclude.js') }}"></script>#}
 
-        <script src="{{ asset('bundles/app/js/main.js') }}"></script>
+        {#<script src="{{ asset('bundles/app/js/main.js') }}"></script>#}
 
         <script>
             $(document).ready(function() {
