--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -29,8 +29,8 @@
 
     {% block social %}{% endblock %}
     {% block javascript %}
+        <script src="{{ asset('assets/vendor/jquery/dist/jquery.min.js') }}"></script>
         {% javascripts
-            'assets/vendor/jquery/dist/jquery.min.js'
             'assets/vendor/bootstrap/dist/js/bootstrap.min.js'
             'assets/vendor/owl.carousel/dist/owl.carousel.min.js'
             'assets/vendor/chosen/chosen.jquery.min.js'
@@ -43,7 +43,6 @@
         {% endjavascripts %}
         <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
         <script src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
-        {#<script src="{{ asset('assets/vendor/jquery/dist/jquery.min.js') }}"></script>#}
         {#<script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>#}
         {#<script src="{{ asset('assets/vendor/owl.carousel/dist/owl.carousel.min.js') }}"></script>#}
         {#<script src="{{ asset('assets/vendor/chosen/chosen.jquery.min.js') }}"></script>#}
