--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -30,11 +30,11 @@
     {% block social %}{% endblock %}
     {% block javascript %}
         <script src="{{ asset('assets/vendor/jquery/dist/jquery.min.js') }}"></script>
+        <script src="{{ asset('assets/vendor/bootstrap-multiselect/dist/js/bootstrap-multiselect.js') }}"></script>
         {% javascripts
             'assets/vendor/bootstrap/dist/js/bootstrap.min.js'
             'assets/vendor/owl.carousel/dist/owl.carousel.min.js'
             'assets/vendor/chosen/chosen.jquery.min.js'
-            'assets/vendor/bootstrap-multiselect/dist/js/bootstrap-multiselect.js'
             'assets/vendor/jquery-mask-plugin/dist/jquery.mask.min.js'
             'assets/vendor/hinclude/hinclude.js'
             'bundles/app/js/main.js'
@@ -46,7 +46,7 @@
         {#<script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>#}
         {#<script src="{{ asset('assets/vendor/owl.carousel/dist/owl.carousel.min.js') }}"></script>#}
         {#<script src="{{ asset('assets/vendor/chosen/chosen.jquery.min.js') }}"></script>#}
-        {#<script src="{{ asset('assets/vendor/bootstrap-multiselect/dist/js/bootstrap-multiselect.js') }}"></script>#}
+
 
         {#<script src="{{ asset('assets/vendor/jquery-mask-plugin/dist/jquery.mask.min.js') }}"></script>#}
 
