--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -6,6 +6,12 @@
     <script src="{{ asset('assets/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js') }}"></script>
 {% endblock %}
 
+{% block seo %}
+    <title>Альманах медицинских событий </title>
+    <meta name="description" content="Закрытая социально-информационная среда, где представлены медицинские новости, события, новейшие исследования, трансляции с мероприятий и другая информация"/>
+    <meta name="keywords" content="медицинские мероприятия, новости, трансляции событий, медицинские калькуляторы, федеральный стандарты"/>
+{% endblock %}
+
 {% block topBody %}
     <div class="row hidden-sm hidden-xs">
         <div class="event-carusel">
