--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -818,11 +818,11 @@ nav .navbar-nav li.active a:hover{
 }
 .custom-banner{
     background: url('/bundles/app/images/custombanner/bg.png') #FFF no-repeat;
-    width: 600px;
+    width: 700px;
     padding: 15px 20px;
     position: fixed;
     left: 50%;
-    margin-left: -300px;
+    margin-left: -350px;
     top: 120px;
     border: 1px solid #777;
     -webkit-border-radius: 5px;
@@ -860,4 +860,7 @@ nav .navbar-nav li.active a:hover{
         font-weight: bold;
     }
 
+}
+#custum-banner{
+    display: none;
 }
